tests/e2e/pass/m10_str.ep
# EXIT: 0
# STDOUT: hellobye!
fun main(): void {
    let s = "hello"
    print(s)
    let t = "hello"
    if s == t {
        print("bye")
    } else {
        print("no")
    }
    if s != "world" {
        print("!")
    }
    os.ExitProcess(0)
}
