tests/e2e/fail/callback_address_builtin.ep
# COMPILE_ERROR: ptr cannot take the address of builtin 'print'

fun main(): void {
    let callback = ptr(print)
}
